# Robot-Operating-System

./: .gitignore  README.md  ros_tutorial.zip:Zone.Identifier
combined_ws/install/: local_setup.sh  setup.sh
combined_ws/log/: latest_build
combined_ws/package_with_interfaces/: CMakeLists.txt
combined_ws/package_with_interfaces/srv/: WhatIsThePoint.srv
combined_ws/python_package_that_uses_the_messages/: setup.py
combined_ws/src/simple_python_package/: setup.cfg
combined_ws/src/simple_python_package_with_node/: setup.py
cpp_ws/: README.md
cpp_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cpp_ws/log/: latest_build  latest_test
cpp_ws/src/cpp_parameters/: CMakeLists.txt  README.md
cpp_ws/src/custom_interfaces/: CMakeLists.txt  README.md  package.xml
cpp_ws/src/custom_interfaces/src/: fibonacci_action_server.cpp  publish_address_book.cpp
cpp_ws/src/msg_pub_sub_simple_node/: CMakeLists.txt
cpp_ws/src/srv_client/: CMakeLists.txt
navigation_gazebo_ws/: README.md
navigation_gazebo_ws/src/arm_01/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/arm_02/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/arm_03/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/arm_03/arm_03/: basic_trajectory_action_service.py
navigation_gazebo_ws/src/arm_03/config/: armA_controller.yaml
navigation_gazebo_ws/src/arm_03/description/: arm.urdf.xacro
navigation_gazebo_ws/src/arm_03/description/meshes/gripA/: gripA_L_1.stl
navigation_gazebo_ws/src/arm_03/description/xacro/: armA.bumper_config.xacro  armA.gazebo_config_control.xacro  armA.transmission.xacro  armA.xacro  gripA.xacro
navigation_gazebo_ws/src/arm_03/launch/: arm_sim.launch.py
navigation_gazebo_ws/src/diff_drive_bot/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/diff_drive_controller_bot/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/fwd_bot/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/kalman/: kalman.py
navigation_gazebo_ws/src/maps/: graph.json  keepout_mask.pgm  keepout_mask.yaml  keepout_world_01.pgm  keepout_world_01.yaml  map.pgm  map.yaml  maze_01_binary.pgm  maze_01_binary.yaml  nav_graph_world_01.json  new_keepout.pgm  new_keepout.yaml  world_01.pgm  world_01.yaml
navigation_gazebo_ws/src/multi_bot_03/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/multi_bot_04/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/multi_bot_nav_01/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/multi_bot_nav_02/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/multi_bot_nav_03/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/nav25d_01/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/nav25d_02/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/nav25d_02/config/: params.yaml
navigation_gazebo_ws/src/nav25d_02/description/: robot.urdf.xacro
navigation_gazebo_ws/src/nav25d_02/description/xacro/: depth_camera.xacro  dimensions.xacro  gazebo_control.xacro  imu_sensor.xacro  robot_core.xacro
navigation_gazebo_ws/src/nav25d_02/launch/: _navigation_launch.py  _slam_launch.py  globals.py  multi_simulation_launch.py
navigation_gazebo_ws/src/nav25d_02/nav25d_02/: Coordinator.py  GlobalPlannerAStarGraph.py  GlobalPlannerAStarGrid.py  Navigation (another copy).py  Navigation.py  PathFollower.py  kalman (another copy).py  kalman.py
navigation_gazebo_ws/src/nav25d_03/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/nav25d_04/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/navigation_bot_01/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_02/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_03/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_04/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_05/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_06/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_07/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_08/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_09/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_10/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/navigation_bot_10/config/: nav2_params.yaml
navigation_gazebo_ws/src/navigation_bot_10/description/: camera.xacro  robot.urdf.xacro
navigation_gazebo_ws/src/navigation_bot_10/launch/: bringup_launch.py  globals.py  localization_launch.py  main_simulation_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  spawn_launch.py
navigation_gazebo_ws/src/navigation_bot_10/scripts/: 06_07_waypoint_follower.py  10_charger_docking.py  basic_navigator.py
navigation_gazebo_ws/src/navigation_bot_11/: CMakeLists.txt  package.xml
navigation_gazebo_ws/src/ros2_teleop/: package.xml  setup.cfg  setup.py
navigation_gazebo_ws/src/utils/: convert_png_to_binary.py  convert_png_to_map.py  create_aruco_marker.py
navigation_gazebo_ws/src/worlds/: maze_with_charger_and_obstacle.sdf  perfect_world.sdf  world_01.sdf  world_25d.sdf
python_ws/: README.md  tmp.py
python_ws/install/: local_setup.sh  setup.sh
python_ws/log/: latest_build
python_ws/src/motor_distance_sensor_package/: README.md  setup.py
python_ws/src/package_that_uses_package_with_interfaces/: README.md  setup.cfg  setup.py
python_ws/src/package_with_configurable_nodes/: README.md  package.xml  setup.cfg  setup.py
python_ws/src/package_with_interfaces/: CMakeLists.txt  README.md  package.xml
python_ws/src/positio_encoder_decoder_python_package/: README.md  setup.cfg
test_1_ros2_ws/package_with_interfaces/: package.xml
test_1_ros2_ws/python_package_that_uses_the_messages/python_package_that_uses_the_messages/: amazing_quote_subscriber_node.py
test_1_ros2_ws/src/simple_python_package/: setup.py
test_1_ros2_ws/src/simple_python_package_with_node/: setup.cfg
test_2_ros2_ws/install/: setup.sh
test_2_ros2_ws/log/: latest_build
(+557 files in other folders)
