<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_bot_10</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>
  
  <build_depend>navigation2</build_depend>
  <build_depend>launch_ros</build_depend>  

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <!-- exec_depend>joint_state_publisher_gui</exec_depend -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>  

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <!-- 
      The variables correspond to the following environment variables:

      gazebo_plugin_path: GAZEBO_PLUGIN_PATH
      gazebo_model_path: GAZEBO_MODEL_PATH
      gazebo_media_path: GAZEBO_RESOURCE_PATH    

      This will not set the environment variables directly, but will make the values available to gazebo_ros.  
    -->
    <!-- gazebo_ros gazebo_plugin_path="lib"/ -->
    <gazebo_ros gazebo_model_path="${prefix}/../models"/>
    <!-- gazebo_ros gazebo_media_path="${prefix}/../models -->
    <!-- gazebo_ros gazebo_media_path="${prefix}/worlds:${prefix}/media"/ -->
  </export>

</package>